--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -16,7 +16,7 @@
 	p a, li a{
 		text-decoration: underline;
 		// font-family: $primaryFont;
-		color: $primaryColor;
+		// color: $primaryColor;
 		&:hover {
 			text-decoration: underline;
 			color: $secondaryColor;
@@ -131,30 +131,22 @@ article p ~ h2 {
 
 body.inside {
 	background: url('images/icon-dlogo.png') top center;
+	background-size: 50vw auto;
 	background-repeat: no-repeat;
-
+	background-position-y: 300px; 
+	background-position-x:  calc(50% - 100px;); 
 	@include media($tablet) {
+		background-size: auto auto;
 		background-position-y: 810px; 
 		background-position-x:  calc(50% - 240px;); 
-
 		&.tmpl_type_rmg_single_case  {
-				background-position-y: calc(810px - 330px); 
+			background-position-y: calc(810px - 330px); 
 		}
 	}
-	
-	@include media($tablet) {
-		
-	}
-
-
-
 }
 
 .interior {
 	text-align: left;
-	.tmpl_type_page_landing & {
-		// background: none;
-	}
 	background-repeat: no-repeat;
 	padding-top: 30px;
 	@include media($tablet) {
@@ -215,7 +207,7 @@ body.inside {
 				position: relative;
 
 				margin-bottom: 7px;
-				padding-left: 23px;
+				padding-left: 30px;
 
 				&:before {
 					left: 0px;
@@ -385,6 +377,57 @@ body.inside {
 }
 
 
+.onpage-reviews {
+	padding-top: 75px;
+	padding-bottom: 75px;
+	background: #fbead2;
+	text-align: center;
+	position: relative;
+	&:before {
+		z-index: -1;
+		content: '';
+		background: url("images/icon-quote-test.png") top center no-repeat;
+		position: absolute;
+		background-size: 199px 139px;
+		width: 199px;
+		height: 139px;
+		z-index: 0;
+		left: calc(50% - 100px);
+		top: 40px;
+		@include media($desktop) {
+			// left: 100px;
+		}
+	}
+
+	p {
+		position: relative;
+		z-index: 1;
+		font-family: $secondaryFont;
+		font-weight: 100;
+		@include font(20px, 1.5em);
+		@include media($tablet) {
+			@include font(30px, 1.5em);
+		}
+	}
+	.the-stars {
+		margin: 30px 0;
+	}
+	i {
+		color: $primaryColor;
+		font-size: 35px;
+	}
+	.the-testi {
+		i {margin-left: 15px;
+			font-size: 25px;
+		}
+		span {font-family: $secondaryFont;
+			@include font(25px, 1.5em)
+			letter-spacing: 2px;
+
+		}
+	}
+}
+
 
 .page-feature {
 	padding: 0;
@@ -393,18 +436,30 @@ body.inside {
 	display: flex;
 	flex-direction: column-reverse;
 	background-repeat: no-repeat !important;
-	background-color: #fbfcf9;
+	// background-color: #fbfcf9;
+	background: url('images/bg-curves-yellow-reverse.jpg');
 	@include media($desktop) {
-		flex-direction: row-reverse;
+		flex-direction: row;
 		background-size: cover !important;
 	}
 
 	.feature-image {
-		min-height: 350px;
-		@include media($tablet) {
-			min-height: 650px;
+		@include media($desktop) {
+			margin-right: 40px;
+		}
+		@include media($full) {
+			margin-right: 60px;
+		}
+		img {
+			width: 100%;
+			@include media($desktop) {
+				max-width: 800px;
+				box-shadow: 10px 10px 20px rgba( $darkColor, .4);
+			}
 		}
 	}
+
+
 	> div {
 		@include media($tablet) {
 			width: 100%;
@@ -459,48 +514,6 @@ body.inside {
 }
 
 
-/*=========================================
-=            Testimonials Page            =
-=========================================*/
-
-.testi-container {
-	display: flex;
-	flex-wrap: wrap;
-	.the-testi {
-		border: 1px solid rgba($primaryColor, .3) ;
-		padding: 20px 20px 10px 20px;
-		position: relative;
-		width: 100%;
-		height: auto;
-		@include media($tablet) {
-			margin-bottom: 40px;
-			margin-right: 20px;
-			width: 45%;
-		}
-		video, iframe {
-			width: 100%;
-			max-height: 280px;
-		}
-		img {
-			max-width: 100%;
-			height: auto;
-		}
-		p {
-			margin-bottom: 10px;
-			display: block;
-		}
-		// &:before {
-		// 	position: absolute;
-		// 	content:'';
-		// 	background-image: url('images/icon-quote.jpg');
-		// 	background-size: 66px 41px;
-		// 	width: 66px;
-		// 	height: 41px;
-		// 	left: calc(50% - 33px);
-		// 	top: 10px;
-		// }
-	}
-}
 
 
 /*=========================================================================
@@ -552,155 +565,43 @@ body.inside {
 ==============================================*/
 
 
-//breast augmentation page-989
 
-.page-989 {
-	#first-content {
-		padding-top: 0;
-	}
-	.flexible-split-section:nth-of-type(1) {
-	}
-	#Benefits {
-		flex-direction: row-reverse;
-		flex-wrap: nowrap;
-	}
-	#Consultation {
-		background-color: #fbfcf9; 
-
-		h2 {
-			margin-bottom: 10px;
-		}
-		h3 {
-			margin-top: 0;
-			font-style: italic;
-		}
-	}
-	#Ethnic-Considerations {
-		@include media($desktop) {
-			flex-direction: row-reverse;
-			.with-content {
-				padding-top: 50px;
-			}
-			.with-bg {
-				height: 900px
-			}
-		}
-		h3 {
-			margin-top: 10px;
-			margin-bottom: 20px;
-			font-family: $primaryFont;
-			text-transform: uppercase;
-			letter-spacing: 2px;
-			font-size: 18px;
-
-			@include media($tablet) {
-				font-size: 22px;
-				margin-bottom: 0px;
-			}
-		}
-	}
-	#Placement {
-		background-color: #fbfcf9; 
-
-		h2 {
-			margin-bottom: 0px;
-		}
-		h3 {
-			margin-top: 30px;
-			margin-bottom: 20px;
-			font-family: $primaryFont;
-			text-transform: uppercase;
-			letter-spacing: 2px;
-			font-size: 18px;
-			@include media($tablet) {
-				font-size: 20px;
-				margin-bottom: 0px;
-			}
-		}
-	}
-	#Incisions {
-		.with-bg {
-			height: 600px;
-
-			@include media($tablet) {
-				height: 1200px;
-				
-			}
-		}
-	}
-	#Surgery {
-		background-color: #fbfcf9; 
+body.inside.tmpl_type_page_landing {
+	@include media($desktop) {
+	background-position-y: 1010px;
+		
 	}
 }
 
-/* Tummy Tuck Page */
-
-.page-1001 {
-	#Procedure {
-		flex-direction: row-reverse;
+.tmpl_type_page_landing header {
+	section.site-crumbs {
+		padding-left: 0;
+		padding-right: 0;
 	}
-}
-
-/* Rhuinoplasty Page  */
-
-.page-1017 {
-	#Procedure {
-		flex-direction: row-reverse;
-		background-size: cover;
-	}
-}
-
-.breast-tabs {
-	margin-bottom: 40px;
-	margin-top: 40px;
-	@include media($tablet) {
-		max-width: 650px;
-		margin: 0 auto;
-		margin-bottom: 60px;
-		margin-top: 60px;
-	}
-	.tab-group {
+	@include media($desktop) {
 		display: flex;
-		text-transform: uppercase;
-
-		> div {
-			border: 1px solid #c7c8ca;
-			padding: 5px;
-			// border-bottom: none;
-			background: #fff;
-			border-right: none;
-
-			position: relative;
-			top: 1px;
-			font-size: 10px;
-			line-height: 12px;
-			@include media($tablet) {
-				line-height: 24px;
-				font-size: 16px;
-				padding: 15px;
-			}
-			&:last-of-type {
-				border-right: 1px solid #c7c8ca;
-			}
-
-			&.active {
-				border-bottom: none;
-				// background-color: rgba(#c7c8ca, .5);
-			}
-		}
-
+		flex-wrap: wrap;
+		flex-direction: column;
+		min-height: 1000px;
+		text-align: left;
+		color: $lightColor;
 	}
-	.the-tabs {
-		border: 1px solid #c7c8ca;
-		> div {
-			padding: 20px;
-			display: none;
-			@include media($tablet) {
-				padding: 40px;
-			}
-			&.active {
-				display: block;
-			}
-		}  
+	h1 {
+		color: $lightColor;
+		margin-bottom: 0;
+		@include media($desktop) {
+			margin-left: -150px;
+		}
+	}
+	.inside-logo {
+		margin-top: 200px;
+		margin-left: 0;
+	}
+	.flexible-basic-content {
+		padding-top: 40px;
+		padding-right: 55%;
+		@include media($desktop) {
+			margin-left: -150px;
+		}
 	}
 }
