--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -18,6 +18,12 @@
 		padding-bottom: 0px;
 		
 	}
+	.the-headline {
+			font-style: italic;
+		span {
+			font-style: normal;
+		}
+	}
 	// width: 1020px;
 
 	ul {
@@ -143,7 +149,7 @@
 	form {
 		display: flex;
 		flex-direction: column;
-		// align-items: center;
+		align-items: center;
 		// width: auto;
 		@include media($tablet) {
 			justify-content: center;
@@ -166,6 +172,7 @@
 			// position: relative;
 			input,
 			textarea {
+				padding: 14px 20px;
 				background: transparent !important;
 				width: 100%;
 				border: 1px solid rgba(#fff, 100%);
@@ -180,14 +187,14 @@
 			}
 			::-webkit-input-placeholder {
 				/* WebKit, Blink, Edge */
-				color: rgba(#fff, .4);
+				color: rgba(#fff, 1);
 				font-family: $primaryFont;
 				font-weight: normal;
 				
 			}
 			:-moz-placeholder {
 				/* Mozilla Firefox 4 to 18 */
-				color: rgba(#fff, .4);
+				color: rgba(#fff, 1);
 				font-family: $primaryFont;
 				font-weight: normal;
 				opacity: 1;
@@ -195,7 +202,7 @@
 			}
 			::-moz-placeholder {
 				/* Mozilla Firefox 19+ */
-				color: rgba(#fff, .4);
+				color: rgba(#fff, 1);
 				font-family: $primaryFont;
 				font-weight: normal;
 				opacity: 1;
@@ -203,7 +210,7 @@
 			}
 			:-ms-input-placeholder {
 				/* Internet Explorer 10-11 */
-				color: rgba(#fff, .4);
+				color: rgba(#fff, 1);
 				font-family: $primaryFont;
 				font-weight: normal;
 				
@@ -223,13 +230,14 @@
 		}
 	}
 
+
+	.type-submitbutton {
+		background-color: $primaryAlt;
+		height: 48px;
+	}
 	.submit-btn {
-		background: $primaryAlt !important;
 		@include media($desktop) {
 			margin-left: 0px;
-		}
-		&:hover {
-			background: $secondaryColor !important;
 		}
 	}
 	
@@ -266,7 +274,7 @@
 
 
 .upper-footer {
-	background-color: $tertiaryColor;
+	background-color: #e8e5e5;
 	padding-top: 40px;
 	padding-bottom: 40px;
 
@@ -290,6 +298,10 @@
 		margin-bottom: 40px;
 		@include media($tablet) {
 			margin-bottom: 100px;
+		}
+		font-style: italic;
+		span {
+			font-style: normal;
 		}
 
 	}
@@ -342,11 +354,14 @@
 		.type-singlelinetext {
 			width: 48%;
 		}
-		.type-textarea, .type-submitbutton {
+		.type-textarea {
 			width: 100%;
 			textarea {
 				height: 120px;
 			}
+		}
+		.type-submitbutton {
+			margin: 0 auto;
 		}
 		// 
 	}
