--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -198,8 +198,7 @@
 
 .tmpl_type_rmg_archive, 
 // .tmpl_type_rmg_category_child,
-.tmpl_type_rmg_category_parent 
-{
+.tmpl_type_rmg_category_parent {
 	.gallery-cat-wrap {
 		// @include media($tablet) {
 			display: flex;
