--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -140,57 +140,63 @@
 /* Inside Page Headers */
 
 .int-header {
-	background-color: #f6f7f6;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	margin-top: 60px;
-	min-height: 200px;
-	height: 40vw;
+	height: 210px;
+	margin-top: 140px;
 	display: flex;
-	// align-items: center;
 	@include media($tablet) {
 		margin-top: 0px;
 		padding-top: 0;
 		background-size: cover;
-		height: 730px;
-		.tmpl_type_rmg_single_case & {
-			height: 400px;
-		}
+		height: 530px;
+		// .tmpl_type_rmg_single_case & {
+		// 	height: 400px;
+		// }
 	}
 	@include media($desktop) {
 		background-position: center center;
+		height: 730px;
+		.tmpl_type_rmg_single_case & {
+			height: 530px;
+			.inside-logo {
+				margin-top: 150px;
+			}
+		}
 	}
 }
 
 .inside-logo {
+	background-color: #6d4c39;
 	display: block;
 	text-align: center;
-	// position: absolute;
-	// top: 65px;
-	width: 70px;
-	height: 70px;
+	position: absolute;
+	width: 100%;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	top: 60px;
 	overflow: hidden;
-	// border: 1px solid red;
-	margin-top: 40px;
-	margin-left: 40px;
-
 	@include media($tablet) {
+		background-color: transparent;
 		width: auto;
 		height: auto;
 		position: relative;
 		margin: 0 auto;
 		margin-left: 10vw;
-		margin-top: 300px;
-		// right: calc( 50% + 200px);
+		margin-top: 180px;
+	}
+	@include media($desktop) {
+		margin-top: 200px;
 	}
 	img {
-		width: 250px;
-		// display: none;
-		margin-left: -200px;
+		width: 200px;
 		@include media($tablet) {
 			margin: 0 auto;
 			display: block;
+			width: 350px;
+		}
+		@include media($desktop) {
 			width: auto;
 		}
 	}
