--- a/sass/_menu_touch.scss
+++ b/sass/_menu_touch.scss
@@ -62,7 +62,7 @@
 		.menu-item{
 			> a{
 				padding: 16px 20px;
-				// border-bottom: 1px solid rgba($lightColor, .05);
+				border-bottom: 1px solid rgba($lightColor, .05);
 			}
 		}
 
@@ -75,9 +75,9 @@
 		.sub-menu{
 			display: none;
 			a {
-				font-size: 17px;
+				font-size: 13px;
 				line-height: 1em;
-				letter-spacing: .5px;
+				// letter-spacing: .5px;
 			}
 		}
 
@@ -111,10 +111,9 @@
 	}
 
 	.nav-dropdown-button {
-		// border: 1px solid red;
 		position: absolute;
 		z-index: 25;
-		width: 50px;
+		width: 100%;
 		height: 50px;
 		// background: rgba($lightColor, 0.05);
 		right: 0;
@@ -142,9 +141,9 @@
 	.close-menu {
 		display: block;
 		position: absolute;
-		top: 0px;
-		right: 10px;
-		padding: 14px 10px 7px 15px;
+		top: 10px;
+		left: 10px;
+		// padding: 14px 10px 7px 15px;
 		color: rgba($lightColor, .7); 
 		text-align: center;
 		font-size: 30px; // match to other font-size
